force-app/main/default/objects/Grant_Support_Option__mdt/Grant_Support_Option__mdt.object-meta.xml
<CustomObject>
    <label>Grant Support Option</label>
    <pluralLabel>Grant Support Options</pluralLabel>
</CustomObject>