force-app/main/default/objects/Grant_Support_Option__mdt/fields/Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_Months__c</fullName>
    <label>Duration Months</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>